--- a/student.ipynb
+++ b/student.ipynb
@@ -2066,7 +2066,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x270be3517f0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x28d9dc490b8>"
       ]
      },
      "execution_count": 16,
@@ -2369,8 +2369,8 @@
       "Dep. Variable:                  price   R-squared:                      -0.006\n",
       "Model:                            OLS   Adj. R-squared:                 -0.006\n",
       "Method:                 Least Squares   F-statistic:                    -41.56\n",
-      "Date:                Sun, 02 Dec 2018   Prob (F-statistic):               1.00\n",
-      "Time:                        18:21:36   Log-Likelihood:                -14384.\n",
+      "Date:                Wed, 05 Dec 2018   Prob (F-statistic):               1.00\n",
+      "Time:                        22:04:44   Log-Likelihood:                -14384.\n",
       "No. Observations:               20160   AIC:                         2.878e+04\n",
       "Df Residuals:                   20156   BIC:                         2.881e+04\n",
       "Df Model:                           3                                         \n",
@@ -2400,8 +2400,8 @@
       "Dep. Variable:                  price   R-squared:                       0.119\n",
       "Model:                            OLS   Adj. R-squared:                  0.119\n",
       "Method:                 Least Squares   F-statistic:                     339.8\n",
-      "Date:                Sun, 02 Dec 2018   Prob (F-statistic):               0.00\n",
-      "Time:                        18:21:36   Log-Likelihood:                -13045.\n",
+      "Date:                Wed, 05 Dec 2018   Prob (F-statistic):               0.00\n",
+      "Time:                        22:04:44   Log-Likelihood:                -13045.\n",
       "No. Observations:               20160   AIC:                         2.611e+04\n",
       "Df Residuals:                   20151   BIC:                         2.618e+04\n",
       "Df Model:                           8                                         \n",
@@ -2436,8 +2436,8 @@
       "Dep. Variable:                  price   R-squared:                       0.267\n",
       "Model:                            OLS   Adj. R-squared:                  0.266\n",
       "Method:                 Least Squares   F-statistic:                     305.7\n",
-      "Date:                Sun, 02 Dec 2018   Prob (F-statistic):               0.00\n",
-      "Time:                        18:21:37   Log-Likelihood:                -11189.\n",
+      "Date:                Wed, 05 Dec 2018   Prob (F-statistic):               0.00\n",
+      "Time:                        22:04:44   Log-Likelihood:                -11189.\n",
       "No. Observations:               20160   AIC:                         2.243e+04\n",
       "Df Residuals:                   20135   BIC:                         2.263e+04\n",
       "Df Model:                          24                                         \n",
@@ -2489,8 +2489,8 @@
       "Dep. Variable:                  price   R-squared:                       0.105\n",
       "Model:                            OLS   Adj. R-squared:                  0.105\n",
       "Method:                 Least Squares   F-statistic:                     474.7\n",
-      "Date:                Sun, 02 Dec 2018   Prob (F-statistic):               0.00\n",
-      "Time:                        18:21:37   Log-Likelihood:                -13199.\n",
+      "Date:                Wed, 05 Dec 2018   Prob (F-statistic):               0.00\n",
+      "Time:                        22:04:45   Log-Likelihood:                -13199.\n",
       "No. Observations:               20160   AIC:                         2.641e+04\n",
       "Df Residuals:                   20154   BIC:                         2.646e+04\n",
       "Df Model:                           5                                         \n",
@@ -2523,8 +2523,8 @@
       "Dep. Variable:                  price   R-squared:                       0.091\n",
       "Model:                            OLS   Adj. R-squared:                  0.091\n",
       "Method:                 Least Squares   F-statistic:                     405.1\n",
-      "Date:                Sun, 02 Dec 2018   Prob (F-statistic):               0.00\n",
-      "Time:                        18:21:37   Log-Likelihood:                -13356.\n",
+      "Date:                Wed, 05 Dec 2018   Prob (F-statistic):               0.00\n",
+      "Time:                        22:04:45   Log-Likelihood:                -13356.\n",
       "No. Observations:               20160   AIC:                         2.672e+04\n",
       "Df Residuals:                   20154   BIC:                         2.677e+04\n",
       "Df Model:                           5                                         \n",
@@ -2556,8 +2556,8 @@
       "Dep. Variable:                  price   R-squared:                       0.003\n",
       "Model:                            OLS   Adj. R-squared:                  0.003\n",
       "Method:                 Least Squares   F-statistic:                     12.59\n",
-      "Date:                Sun, 02 Dec 2018   Prob (F-statistic):           3.15e-12\n",
-      "Time:                        18:21:37   Log-Likelihood:                -14290.\n",
+      "Date:                Wed, 05 Dec 2018   Prob (F-statistic):           3.15e-12\n",
+      "Time:                        22:04:45   Log-Likelihood:                -14290.\n",
       "No. Observations:               20160   AIC:                         2.859e+04\n",
       "Df Residuals:                   20154   BIC:                         2.864e+04\n",
       "Df Model:                           5                                         \n",
@@ -2589,8 +2589,8 @@
       "Dep. Variable:                  price   R-squared:                       0.450\n",
       "Model:                            OLS   Adj. R-squared:                  0.450\n",
       "Method:                 Least Squares   F-statistic:                     1651.\n",
-      "Date:                Sun, 02 Dec 2018   Prob (F-statistic):               0.00\n",
-      "Time:                        18:21:37   Log-Likelihood:                -8288.7\n",
+      "Date:                Wed, 05 Dec 2018   Prob (F-statistic):               0.00\n",
+      "Time:                        22:04:45   Log-Likelihood:                -8288.7\n",
       "No. Observations:               20160   AIC:                         1.660e+04\n",
       "Df Residuals:                   20149   BIC:                         1.669e+04\n",
       "Df Model:                          10                                         \n",
@@ -2634,8 +2634,8 @@
       "Dep. Variable:                  price   R-squared:                       0.548\n",
       "Model:                            OLS   Adj. R-squared:                  0.547\n",
       "Method:                 Least Squares   F-statistic:                     353.4\n",
-      "Date:                Sun, 02 Dec 2018   Prob (F-statistic):               0.00\n",
-      "Time:                        18:21:37   Log-Likelihood:                -6311.2\n",
+      "Date:                Wed, 05 Dec 2018   Prob (F-statistic):               0.00\n",
+      "Time:                        22:04:45   Log-Likelihood:                -6311.2\n",
       "No. Observations:               20160   AIC:                         1.276e+04\n",
       "Df Residuals:                   20090   BIC:                         1.332e+04\n",
       "Df Model:                          69                                         \n",
@@ -3010,34 +3010,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "number of features: 5\n",
       "price    0.127846\n",
       "dtype: float64\n",
       "price    0.13013\n",
       "dtype: float64\n",
+      "-----------------\n",
+      "number of features: 15\n",
       "price    0.093061\n",
       "dtype: float64\n",
       "price    0.09637\n",
       "dtype: float64\n",
+      "-----------------\n",
+      "number of features: 25\n",
       "price    0.068356\n",
       "dtype: float64\n",
       "price    0.070582\n",
       "dtype: float64\n",
+      "-----------------\n",
+      "number of features: 35\n",
       "price    0.050837\n",
       "dtype: float64\n",
       "price    0.050832\n",
       "dtype: float64\n",
+      "-----------------\n",
+      "number of features: 45\n",
       "price    0.044539\n",
       "dtype: float64\n",
       "price    0.044905\n",
       "dtype: float64\n",
+      "-----------------\n",
+      "number of features: 55\n",
       "price    0.040709\n",
       "dtype: float64\n",
       "price    0.041437\n",
       "dtype: float64\n",
+      "-----------------\n",
+      "number of features: 65\n",
       "price    0.039032\n",
       "dtype: float64\n",
       "price    0.039936\n",
-      "dtype: float64\n"
+      "dtype: float64\n",
+      "-----------------\n"
      ]
     }
    ],
@@ -3060,8 +3074,10 @@
     "    yhat_test = linreg.predict(X_test[selected_columns])\n",
     "    mse_train = np.sum((y_train-yhat_train)**2)/len(y_train)\n",
     "    mse_test =np.sum((y_test-yhat_test)**2)/len(y_test)\n",
+    "    print(\"number of features: \" + str(n))\n",
     "    print(mse_train)\n",
     "    print(mse_test)\n",
+    "    print(\"-----------------\")\n",
     "MSE_test.append(mse_test)\n",
     "MSE_train.append(mse_train)"
    ]
@@ -3096,23 +3112,25 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.8361424645040965"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.83291614 0.82937498 0.83149405 0.83656143 0.8321237  0.83601461\n",
+      " 0.84595546 0.83433301 0.83640314 0.84624812]\n",
+      "\n",
+      "0.8361424645040965\n"
+     ]
     }
    ],
    "source": [
-    "# Cross Validate the data using all features\n",
+    "# Cross Validate the data using the k-fold method\n",
     "y = df_final[[\"price\"]]\n",
     "X = df_final.drop([\"price\"], axis=1)\n",
     "\n",
     "cv_10_results = cross_val_score(linreg, X, y, cv=10)\n",
-    "np.mean(cv_10_results)"
+    "print(cv_10_results)\n",
+    "print()\n",
+    "print(np.mean(cv_10_results))"
    ]
   },
   {
@@ -3198,6 +3216,13 @@
     "print(\"The living room square feet coefficient is 0.254, which means that with all other predictors held constant, a one unit change in price causes a 0.254 change in square feet of the living room. This positive correlation makes sense. The more a house cost, the larger the living room will be.\")\n",
     "print(\"The zip_98199 coefficient is 0.518, which means that will all other predictors held constant, a one unit change in price causes a 0.518 change in value for this zip code. The positive correlation shows that this zip code must have a higher than average mean in housing prices.\")\n",
     "print(\"The zip_98001 coefficient is -0.45, which means that will all other predictors held constant, a one unit change in price causes a -0.45 change in value for this zip code. The negative correlation shows that this zip code must have a lower than average mean in housing prices.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Business Decisions"
    ]
   },
   {
